--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="w3-third">
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="RAJ_0977.JPG" style="width:100%" height="450px" alt="Avatar">      
+          <img src="kuntal_1.JPG" style="width:100%" height="450px" alt="Avatar">      
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2 style="color: white;">Kuntal Samanta</h2>
           </div>
